# cacherch

./: .gitignore  Cargo.toml  README.md
docs/: caching.md
index/: .managed.json  meta.json
src/: cache.rs  cli.rs  errors.rs  helpers.rs  indexer.rs  lib.rs  log.rs  main.rs  searcher.rs  types.rs
