[package]
name = "cacherch"
version = "0.1.0"
edition = "2024"

[dependencies]
console = "0.16.1"
tantivy = "0.25.0"
thiserror = "2.0.17"
serde_json = "1.0.104"
pdf-extract = "0.10.0"
tokio = {version = "1.48.0", features = ["full"] }
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
